--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,6 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: cardgame
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
   redis:
     image: redis:7-alpine
     ports:
@@ -29,18 +18,19 @@ services:
       - /app/node_modules
     ports:
       - "5004:3001"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
-      DATABASE_HOST: postgres
+      DATABASE_HOST: host.docker.internal
       DATABASE_PORT: 5432
-      DATABASE_USER: user
-      DATABASE_PASSWORD: password
-      DATABASE_NAME: cardgame
+      DATABASE_USER: ${POSTGRES_USER:-postgres}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      DATABASE_NAME: ${POSTGRES_DB:-cardgame}
       REDIS_HOST: redis
       REDIS_PORT: 6379
       JWT_SECRET: supersecretkey
       PORT: 3001
     depends_on:
-      - postgres
       - redis
 
   frontend:
@@ -61,5 +51,4 @@ services:
       - backend
 
 volumes:
-  postgres_data:
   redis_data:
