fix: upgrade to Node 20 and fix nest permission issue

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:18-alpine
+FROM node:20-alpine
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN chmod +x node_modules/.bin/*
 CMD ["npm", "run", "start:dev"]
