--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,11 @@ jobs:
             echo "POSTGRES_USER=postgres" >> .env
             echo "POSTGRES_PASSWORD=your_postgres_password" >> .env
             echo "POSTGRES_DB=cardgame" >> .env
+            # Backend environment variables
+            echo "DATABASE_URL=postgresql://postgres:your_postgres_password@host.docker.internal:5432/cardgame" >> .env
+            echo "REDIS_URL=redis://redis:6379" >> .env
+            echo "JWT_SECRET=your-super-secret-jwt-key-change-this-in-production" >> .env
+            echo "NODE_ENV=production" >> .env
             
             # Ensure docker compose exists
             docker compose version || (echo "Docker Compose not found" && exit 1)
