feat: connect to shared PostgreSQL container on shared-net network

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,15 +41,18 @@ jobs:
             # Create .env for docker compose
             echo "NEXT_PUBLIC_API_URL=http://72.60.42.121:5004" > .env
             echo "NEXT_PUBLIC_SOCKET_URL=http://72.60.42.121:5004" >> .env
-            # PostgreSQL credentials (use existing server PostgreSQL)
+            # PostgreSQL credentials (shared-postgres container)
             echo "POSTGRES_USER=postgres" >> .env
-            echo "POSTGRES_PASSWORD=your_postgres_password" >> .env
+            echo "POSTGRES_PASSWORD=StrongPass123!" >> .env
             echo "POSTGRES_DB=cardgame" >> .env
             # Backend environment variables
-            echo "DATABASE_URL=postgresql://postgres:your_postgres_password@host.docker.internal:5432/cardgame" >> .env
+            echo "DATABASE_URL=postgresql://postgres:StrongPass123!@shared-postgres:5432/cardgame" >> .env
             echo "REDIS_URL=redis://redis:6379" >> .env
             echo "JWT_SECRET=your-super-secret-jwt-key-change-this-in-production" >> .env
             echo "NODE_ENV=production" >> .env
+            
+            # Create cardgame database in shared-postgres if it doesn't exist
+            docker exec shared-postgres psql -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'cardgame'" | grep -q 1 || docker exec shared-postgres psql -U postgres -c "CREATE DATABASE cardgame;"
             
             # Ensure docker compose exists
             docker compose version || (echo "Docker Compose not found" && exit 1)
