fix(deploy): run Next.js in production (build+start) to serve under /cardgames and avoid dev 404s

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    command: npm run dev
+    # Run production build then start the server to ensure basePath/assetPrefix are applied
+    command: sh -c "npm run build && npm run start"
     volumes:
       - ./frontend:/app
       - /app/node_modules
