revert: return to IP/root-path deployment (remove /cardgames assumptions)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    command: npm run start
+    command: npm run dev
     volumes:
       - ./frontend:/app
       - /app/node_modules
