--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,6 @@
 FROM node:20-alpine
 WORKDIR /app
-
 COPY package*.json ./
-RUN npm ci
-
+RUN npm install
 COPY . .
-RUN npm run build
-
-EXPOSE 3000
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
